--- a/src/AuctionService/appsettings.json
+++ b/src/AuctionService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=auctions;Port=5434;User Id=postgres;Password=abc123;"
+  },
   "AllowedHosts": "*"
 }
