--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5434:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - /var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
@@ -27,8 +27,4 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongodata:/data/db
-
-volumes:
-  pgdata:
-  mongodata:
+      - /var/lib/mongodb/data
