--- a/src/SearchService/appsettings.json
+++ b/src/SearchService/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "MongoDbConnection": "mongodb://root:abc123@localhost"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuctionServiceUrl": "http://localhost:7001"
 }
