Agregando semilla y postgres

--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -12,6 +12,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Server=localhost;Database=identity;Port=5434;User Id=postgres;Password=abc123;",
+    "SQLiteDefaultConnection": "Data Source=AspIdUsers.db;"
   }
 }
