--- a/src/IdentityService/Properties/launchSettings.json
+++ b/src/IdentityService/Properties/launchSettings.json
@@ -4,9 +4,10 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://localhost:5000"
       },
-      "applicationUrl": "https://localhost:5001"
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
