auctionService configurado para cliente de token de identity server

--- a/src/AuctionService/appsettings.json
+++ b/src/AuctionService/appsettings.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=auctions;Port=5434;User Id=postgres;Password=abc123;"
-  },
-  "AllowedHosts": "*"
+  },  
+  "IdentityServiceUrl": "http://localhost:5000"
 }
