--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=auctions;Port=5434;User Id=postgres;Password=abc123;"
-  }
+  },
+  "IdentityServiceUrl": "http://localhost:5000"
 }
